src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Material__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Id__c</fullName>
        <formula>Material__r.Id</formula>
        <label>Material Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Name__c</fullName>
        <formula>Material__r.Name</formula>
        <label>Material Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Quantity__c * List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material_Name__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Total_Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>List_Price__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Transaction {0000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_date</fullName>
        <active>true</active>
        <description>the transaction date cannot be in the future</description>
        <errorConditionFormula>Transaction_Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Transaction_Date__c</errorDisplayField>
        <errorMessage>The transaction date cannot be set after today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_quantity</fullName>
        <active>true</active>
        <description>quantity cannot be negative or 0</description>
        <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>